--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
